1999-11-04  Karl Fogel  <kfogel@red-bean.com>

	* log.c (log_usage): Revert Jim Kingdon's reversion of my change
	of 1999-11-03.  Allowing a space between option and argument
	results in lossage; here is a reproduction recipe: run this from
	the top of a remote copy of the cvs source tree

	   cvs log -d '>1999-03-01' > log-out.with-space

	and then run this (note there's no space after -d now):
	
	   cvs log -d'>1999-03-01' > log-out.no-space

	The resulting files differ; furthermore, a glance at the output of
	cvs shows that the first command failed to recurse into
	subdirectories.  Until this misbehavior can be fixed in the source
	code, the documentation should reflect the true state of affairs:
	if one simply omits the space, everything works fine.

1999-11-04  Jim Kingdon  <http://developer.redhat.com/>

	* log.c (log_usage): Revert Karl's change regarding -d and
	-s.  A space is allowed (see sanity.sh for example).

1999-11-03  K.J. Paradise (kj@sourcegear.com>
	
	* history.c: cleaned up my prior change a bit, per Larry Jones'
	comments, and John O'Conner's additional comments about bits of
	non MS-Visual C++ compliancy of my code.  

1999-11-04  Larry Jones <larry.jones@sdrc.com>

	* sanity.sh: Check that tr that correctly handles NULs; if not, try
	to find a version that does; if none can be found, warn user.
	Also fix warnings for defective expr.

1999-11-04  Karl Fogel  <kfogel@red-bean.com>

	Changes for empty/random passwords in anon pserver access:
	
	* server.c (check_repository_password): if password empty, grant
	access no matter what password is received; this is so anon CVS no
	longer requires a password but remains backwards-compatible with
	all those clients out there.

	* client.c (connect_to_pserver): proceed with login even if
	password not found in .cvspass file -- just use empty string as
	password.  And if such a login fails, print a descriptive error.

	* login.c (get_cvs_password): don't complain if file or password