@@ -1,3 +1,10 @@
+1999-11-05  Larry Jones <larry.jones@sdrc.com>
+
+	* log.c (cvslog): Fix -s and -d with spaces on client side.
+	(log_usage): Revert Karl's change once again.
+	sanity.sh(rcs3-5): No longer get different results from local
+	and client/server.
+
 1999-11-04  Karl Fogel  <kfogel@red-bean.com>
 
 	* log.c (log_usage): Revert Jim Kingdon's reversion of my change
